blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Brief_received__c.field-meta.xml
<CustomField>
    <fullName>Brief_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The client has given a written brief or goals we can scope against.</description>
    <label>Brief received</label>
    <type>Checkbox</type>
</CustomField>