blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Budget_range__c.field-meta.xml
<CustomField>
    <fullName>Budget_range__c</fullName>
    <description>The monthly or project budget the client has indicated for this work.</description>
    <label>Budget range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 5k</fullName>
            </value>
            <value>
                <fullName>5k to 15k</fullName>
            </value>
            <value>
                <fullName>15k to 50k</fullName>
            </value>
            <value>
                <fullName>Over 50k</fullName>
            </value>
            <value>
                <fullName>Not shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>