blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Competitive_pitch__c.field-meta.xml
<CustomField>
    <fullName>Competitive_pitch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The client is comparing us formally with other agencies. Changes how much unpaid work we do.</description>
    <label>Competitive pitch</label>
    <type>Checkbox</type>
</CustomField>