blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Decision_date__c.field-meta.xml
<CustomField>
    <fullName>Decision_date__c</fullName>
    <description>The date the client has said they will choose.</description>
    <label>Decision date</label>
    <type>Date</type>
</CustomField>