blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Engagement_type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_type__c</fullName>
    <description>Whether the deal sells a monthly retainer or a fixed-scope project. Decides what the engagement record gets.</description>
    <label>Engagement type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Retainer plus project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>