blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_reason__c</fullName>
    <description>Why the deal was lost or the client left. Required on every lost stage.</description>
    <label>Lost reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>No decision made</fullName>
            </value>
            <value>
                <fullName>Chose another agency</fullName>
            </value>
            <value>
                <fullName>Went in-house</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Scope mismatch</fullName>
            </value>
            <value>
                <fullName>Unhappy with results</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Client closed or acquired</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>