blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Renewal_risk__c.field-meta.xml
<CustomField>
    <fullName>Renewal_risk__c</fullName>
    <description>Account lead's view of how likely the retainer is to renew.</description>
    <label>Renewal risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>