blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Renewal_type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_type__c</fullName>
    <description>Whether a renewals-pipeline deal is a straight renewal, an upsell or a re-scope.</description>
    <label>Renewal type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Re-scope</fullName>
            </value>
            <value>
                <fullName>Cross-sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>