blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/fields/Service_lines__c.field-meta.xml
<CustomField>
    <fullName>Service_lines__c</fullName>
    <description>The services in the proposal. Used to report revenue and win rate by service.</description>
    <label>Service lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid media</fullName>
            </value>
            <value>
                <fullName>SEO and content</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Brand and creative</fullName>
            </value>
            <value>
                <fullName>Web build</fullName>
            </value>
            <value>
                <fullName>Email and CRM</fullName>
            </value>
            <value>
                <fullName>GTM engineering</fullName>
            </value>
            <value>
                <fullName>Strategy and consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>