blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/recordTypes/New_business.recordType-meta.xml
<RecordType>
    <fullName>New_business</fullName>
    <active>true</active>
    <businessProcess>New_business</businessProcess>
    <description>New business</description>
    <label>New business</label>
</RecordType>