blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/recordTypes/Retainer_renewals.recordType-meta.xml
<RecordType>
    <fullName>Retainer_renewals</fullName>
    <active>true</active>
    <businessProcess>Retainer_renewals</businessProcess>
    <description>Retainer renewals</description>
    <label>Retainer renewals</label>
</RecordType>