blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Gate_new_business_brief_and_scope.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_new_business_brief_and_scope</fullName>
    <active>true</active>
    <description>Stage gate: New business, Brief and scope and later stages need Brief received, Service lines and Engagement type.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "New_business", CASE(StageName, "Lead", 1, "Discovery", 2, "Brief and scope", 3, "Proposal sent (New business)", 4, "Pitch or review", 5, "Negotiation (New business)", 6, "Closed won", 7, 0) &gt;= 3, OR(NOT(Brief_received__c), ISBLANK(Service_lines__c), ISBLANK(TEXT(Engagement_type__c))))</errorConditionFormula>
    <errorMessage>Fill in Brief received, Service lines and Engagement type before moving to Brief and scope.</errorMessage>
</ValidationRule>