blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Gate_new_business_closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_new_business_closed_won</fullName>
    <active>true</active>
    <description>Stage gate: New business, Closed won and later stages need Amount, Close date and Engagement type.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "New_business", CASE(StageName, "Lead", 1, "Discovery", 2, "Brief and scope", 3, "Proposal sent (New business)", 4, "Pitch or review", 5, "Negotiation (New business)", 6, "Closed won", 7, 0) &gt;= 7, OR(ISBLANK(Amount), ISBLANK(CloseDate), ISBLANK(TEXT(Engagement_type__c))))</errorConditionFormula>
    <errorMessage>Fill in Amount, Close date and Engagement type before moving to Closed won.</errorMessage>
</ValidationRule>