blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Gate_new_business_discovery.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_new_business_discovery</fullName>
    <active>true</active>
    <description>Stage gate: New business, Discovery and later stages need Next step date and Budget range.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "New_business", CASE(StageName, "Lead", 1, "Discovery", 2, "Brief and scope", 3, "Proposal sent (New business)", 4, "Pitch or review", 5, "Negotiation (New business)", 6, "Closed won", 7, 0) &gt;= 2, OR(ISBLANK(Next_step_date__c), ISBLANK(TEXT(Budget_range__c))))</errorConditionFormula>
    <errorMessage>Fill in Next step date and Budget range before moving to Discovery.</errorMessage>
</ValidationRule>