blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Gate_new_business_pitch_or_review.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_new_business_pitch_or_review</fullName>
    <active>true</active>
    <description>Stage gate: New business, Pitch or review and later stages need Decision date and Next step date.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "New_business", CASE(StageName, "Lead", 1, "Discovery", 2, "Brief and scope", 3, "Proposal sent (New business)", 4, "Pitch or review", 5, "Negotiation (New business)", 6, "Closed won", 7, 0) &gt;= 5, OR(ISBLANK(Decision_date__c), ISBLANK(Next_step_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Decision date and Next step date before moving to Pitch or review.</errorMessage>
</ValidationRule>