blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Gate_retainer_renewals_review_booked.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_retainer_renewals_review_booked</fullName>
    <active>true</active>
    <description>Stage gate: Retainer renewals, Review booked and later stages need Renewal risk and Next step date.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "Retainer_renewals", CASE(StageName, "Upcoming", 1, "Review booked", 2, "Proposal sent (Retainer renewals)", 3, "Negotiation (Retainer renewals)", 4, "Awaiting signature", 5, "Renewed", 6, 0) &gt;= 2, OR(ISBLANK(TEXT(Renewal_risk__c)), ISBLANK(Next_step_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Renewal risk and Next step date before moving to Review booked.</errorMessage>
</ValidationRule>