blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Gate_retainer_renewals_upcoming.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_retainer_renewals_upcoming</fullName>
    <active>true</active>
    <description>Stage gate: Retainer renewals, Upcoming and later stages need Renewal type.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "Retainer_renewals", CASE(StageName, "Upcoming", 1, "Review booked", 2, "Proposal sent (Retainer renewals)", 3, "Negotiation (Retainer renewals)", 4, "Awaiting signature", 5, "Renewed", 6, 0) &gt;= 1, ISBLANK(TEXT(Renewal_type__c)))</errorConditionFormula>
    <errorDisplayField>Renewal_type__c</errorDisplayField>
    <errorMessage>Fill in Renewal type before moving to Upcoming.</errorMessage>
</ValidationRule>