blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Lost_new_business_closed_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_new_business_closed_lost</fullName>
    <active>true</active>
    <description>Lost reason: New business, Closed lost needs Lost reason.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "New_business", ISPICKVAL(StageName, "Closed lost"), ISBLANK(TEXT(Lost_reason__c)))</errorConditionFormula>
    <errorDisplayField>Lost_reason__c</errorDisplayField>
    <errorMessage>Fill in Lost reason before closing this as Closed lost.</errorMessage>
</ValidationRule>