blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/validationRules/Lost_retainer_renewals_not_renewed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_retainer_renewals_not_renewed</fullName>
    <active>true</active>
    <description>Lost reason: Retainer renewals, Not renewed needs Lost reason.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = "Retainer_renewals", ISPICKVAL(StageName, "Not renewed"), ISBLANK(TEXT(Lost_reason__c)))</errorConditionFormula>
    <errorDisplayField>Lost_reason__c</errorDisplayField>
    <errorMessage>Fill in Lost reason before closing this as Not renewed.</errorMessage>
</ValidationRule>