blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/listViews/My_open_deals.listView-meta.xml
<ListView>
    <fullName>My_open_deals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Lead,Discovery,Brief and scope,Proposal sent (New business),Pitch or review,Negotiation (New business),Upcoming,Review booked,Proposal sent (Retainer renewals),Negotiation (Retainer renewals),Awaiting signature</value>
    </filters>
    <label>My open deals</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>