blueprints/agency-marketing/salesforce/force-app/main/default/objects/Opportunity/listViews/Stalled_deals.listView-meta.xml
<ListView>
    <fullName>Stalled_deals</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Next_step_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Lead,Discovery,Brief and scope,Proposal sent (New business),Pitch or review,Negotiation (New business),Upcoming,Review booked,Proposal sent (Retainer renewals),Negotiation (Retainer renewals),Awaiting signature</value>
    </filters>
    <filters>
        <field>Next_step_date__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <filters>
        <field>Next_step_date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Stalled deals</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>